--- a/css/work.css
+++ b/css/work.css
@@ -224,6 +224,11 @@
     transition: ease-in-out 0.2s;
   }
 
+  .container .works #wi0 .intro,
+  .container .works #wi0 .intro span {
+    color: rgb(29, 38, 57);
+  }
+
   .container .works .intro {
     width: 100%;
     height: 100%;
