--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@
   .container .activity .work2 {
     grid-area: 1/2 / span 4 / span 1;
     /* background-color: rgb(62, 218, 176); */
-    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1ULntNdQeG2GGiRxHmLeo.z1NDDdMvYGwQqU2xpwKxhXn1*GEtyVDbmtkxkkyr7LwRUJH7RPmkOKhNAL6FUpjLA!/r");
+    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1d5Aziq2agPr0McvyAWAGuWPvI5J0.aioiMwvl77P1D1GY5gudzdAISYNObvCc51ouznIzamZcGL3iTVMhk7Dic!/r");
     background-size: 100%;
     background-position: center;
     transition: linear 0.2s;
@@ -336,7 +336,7 @@
   }
 
   .container .activity .work2 {
-    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1ULntNdQeG2GGiRxHmLeo.z1NDDdMvYGwQqU2xpwKxhXn1*GEtyVDbmtkxkkyr7LwRUJH7RPmkOKhNAL6FUpjLA!/r");
+    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1d5Aziq2agPr0McvyAWAGuWPvI5J0.aioiMwvl77P1D1GY5gudzdAISYNObvCc51ouznIzamZcGL3iTVMhk7Dic!/r");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
