--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -63,6 +63,20 @@
     left: 0;
   }
 
+  .bbg5 {
+    width: 100%;
+    height: 500px;
+    background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q14zhK5/jASqEt644m*KNERKGtvN1fMRtYJV8cMOIxUYsAgDs8zGKLpXc*7NCfwQDAtgB8o5wipId0M8yd4MliykZ64bURVAIpE0pVdZtrtvNaGCw.w!/r");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position-y: -70px;
+    background-position-x: center;
+    background-size: 120%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
   .content .title {
     color: white;
     width: 100%;
