--- a/css/index.css
+++ b/css/index.css
@@ -45,16 +45,19 @@
 
   .container .activity .work2 {
     grid-area: 1/2 / span 4 / span 1;
-    /* background-color: rgb(62, 218, 176); */
-    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1d5Aziq2agPr0McvyAWAGuWPvI5J0.aioiMwvl77P1D1GY5gudzdAISYNObvCc51ouznIzamZcGL3iTVMhk7Dic!/r");
-    background-size: 100%;
+    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q4bsQkq/jASqEt644m*KNERKGtvN1RGCmLIqtY67uNvDUXjjwDn8BUK*vPJrRFNpACDU0Et5C*czvvP1FGXOc2FSX3qWzr.awruvO935AeOtb5oFZu0!/r");
+    background-size: 160%;
     background-position: center;
     transition: linear 0.2s;
   }
 
-  .container .activity .work1:hover,
-  .container .activity .work2:hover {
+  .container .activity .work1:hover {
     background-size: 105%;
+    transition: linear 0.2s;
+  }
+
+  .container .activity .work2:hover {
+    background-size: 170%;
     transition: linear 0.2s;
   }
 
@@ -78,7 +81,7 @@
   .container .activity .intro:hover {
     opacity: 100%;
     transition: ease-in-out 0.2s;
-    background-size: cover;
+    background-size: 165%;
   }
 
   .container .activity .intro span {
@@ -336,7 +339,7 @@
   }
 
   .container .activity .work2 {
-    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1d5Aziq2agPr0McvyAWAGuWPvI5J0.aioiMwvl77P1D1GY5gudzdAISYNObvCc51ouznIzamZcGL3iTVMhk7Dic!/r");
+    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q4bsQkq/jASqEt644m*KNERKGtvN1RGCmLIqtY67uNvDUXjjwDn8BUK*vPJrRFNpACDU0Et5C*czvvP1FGXOc2FSX3qWzr.awruvO935AeOtb5oFZu0!/r");
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
