--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -228,8 +228,20 @@
   .bbg4 {
     width: 100%;
     height: 280px;
-    /* background-color: teal; */
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ZougtTlL*2MMSL4DDBaKW28cIXKUmYd08cBzs5ccLCGq9jQTTtt9A6kVUHIg33Ie.hf*btGzGzWZd5*kmapMQU!/r");
+
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-size: 200%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .bbg5 {
+    width: 100%;
+    height: 280px;
+    background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q14zhK5/jASqEt644m*KNERKGtvN1fMRtYJV8cMOIxUYsAgDs8zGKLpXc*7NCfwQDAtgB8o5wipId0M8yd4MliykZ64bURVAIpE0pVdZtrtvNaGCw.w!/r");
 
     background-repeat: no-repeat;
     background-position-x: center;
