--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -105,6 +105,7 @@
     color: rgb(221, 221, 221);
     margin: 380px auto;
     margin-bottom: 150px;
+    text-align: justify;
     /* background-color: rgba(50, 50, 50, 0.658); */
   }
 
