--- a/css/work.css
+++ b/css/work.css
@@ -9,7 +9,7 @@
   .works {
     display: grid;
     width: 100%;
-    height: 1180px;
+    height: 1380px;
     margin-top: 30px;
     margin-bottom: 150px;
 
@@ -81,6 +81,13 @@
     transition: ease-in-out 0.2s;
   }
 
+  #wi8 {
+    background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1XAzPu/jASqEt644m*KNERKGtvN1WhNWMbN0E.789oIMf65PFPx7cutbZa8RSi6yb.UBizHlAbSD0RP80XqVgruAPGnAybc0X1lKu4I4ZEPjTcnVeE!/r")
+      center;
+    background-size: 100%;
+    transition: ease-in-out 0.2s;
+  }
+
   #wi6:hover,
   #wi1:hover,
   #wi2:hover,
@@ -88,14 +95,17 @@
   #wi3:hover,
   #wi4:hover,
   #wi5:hover,
-  #wi7:hover {
+  #wi7:hover,
+  #wi8:hover {
     background-size: 105%;
     transition: ease-in-out 0.2s;
   }
 
   .container .works #wi0 .intro,
-  .container .works #wi0 .intro span {
-    color: rgb(29, 38, 57);
+  .container .works #wi0 .intro span,
+  .container .works #wi8 .intro,
+  .container .works #wi8 .intro span {
+    color: rgb(0, 0, 0);
   }
 
   .container .works .intro {
@@ -212,6 +222,14 @@
     height: 180px;
   }
 
+  #wi8 {
+    background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1XAzPu/jASqEt644m*KNERKGtvN1WhNWMbN0E.789oIMf65PFPx7cutbZa8RSi6yb.UBizHlAbSD0RP80XqVgruAPGnAybc0X1lKu4I4ZEPjTcnVeE!/r")
+      center;
+    background-size: 100%;
+    transition: ease-in-out 0.2s;
+    height: 180px;
+  }
+
   #wi6:hover,
   #wi0:hover,
   #wi1:hover,
@@ -219,14 +237,17 @@
   #wi3:hover,
   #wi4:hover,
   #wi5:hover,
-  #wi7:hover {
+  #wi7:hover,
+  #wi8:hover {
     background-size: 105%;
     transition: ease-in-out 0.2s;
   }
 
   .container .works #wi0 .intro,
-  .container .works #wi0 .intro span {
-    color: rgb(29, 38, 57);
+  .container .works #wi0 .intro span,
+  .container .works #wi8 .intro,
+  .container .works #wi8 .intro span {
+    color: rgb(0, 0, 0);
   }
 
   .container .works .intro {
