--- a/css/common.css
+++ b/css/common.css
@@ -9,7 +9,7 @@
     background-color: #111;
     padding: 30px 0;
     /* min-width: 1400px; */
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
   }
 
   .container {
@@ -146,7 +146,7 @@
     background-color: #111;
     padding: 30px 0;
     width: 100vw;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
   }
 
   .container {
