--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,23 @@
 @media only screen and (min-width: 520px) {
   .container .slogan {
-    width: 100%;
+    width: 82%;
     height: 400px;
-    text-align: center;
-    line-height: 2;
+    text-align: left;
+    line-height: 1.5;
     /* background-color: rgba(255, 255, 255, .3); */
     /* padding:80px 0; */
     box-sizing: border-box;
-    font-size: 70px;
+    font-size: 48px;
     font-weight: 900;
-    font-style: italic;
+    /* font-style: italic; */
+    /* text-transform: uppercase; */
     color: white;
     margin: 125px 0;
   }
 
   .container .slogan span {
     display: block;
+    margin: 12px 0;
     color: rgba(255, 255, 255, 0.7);
     font-size: 24px;
     font-weight: 300;
@@ -216,7 +218,7 @@
 
   .about .aboutItem {
     color: rgb(255, 255, 255);
-    font-size: 65px;
+    font-size: 48px;
     font-weight: 700;
     font-style: normal;
     line-height: 1.3;
@@ -226,11 +228,13 @@
   }
 
   .about .aboutItem span {
-    font-size: 28px;
+    font-size: 18px;
     font-weight: 500;
-    font-style: italic;
+    /* font-style: italic; */
     line-height: 1.5;
     display: block;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
     color: rgba(255, 255, 255, 0.699);
   }
 
@@ -244,7 +248,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 20% -10%;
-    transition: 1s ease-in-out;
+    transition: 1s cubic-bezier(0, 0.5, 0, 1);
   }
 
   .about #address {
@@ -256,7 +260,7 @@
     background-repeat: no-repeat;
     background-size: 110%;
     background-position-x: 30%;
-    transition: 1s ease-in-out;
+    transition: 1s cubic-bezier(0, 0.5, 0, 1);
   }
 
   .about #school {
@@ -268,7 +272,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position-x: 50%;
-    transition: 1s ease-in-out;
+    transition: 1s cubic-bezier(0, 0.5, 0, 1);
   }
 
   .about #hobby {
@@ -282,29 +286,28 @@
     background-size: cover;
     background-position-x: 50%;
     /* opacity: 1; */
-    transition: 1s ease-in-out;
+    transition: 1s cubic-bezier(0, 0.5, 0, 1);
   }
 }
 
 @media only screen and (max-width: 520px) {
   .container .slogan {
-    width: 100%;
+    width: 82%;
     height: 400px;
-    text-align: center;
-    line-height: 2;
-    /* background-color: rgba(255, 255, 255, .3); */
-    /* padding:80px 0; */
+    text-align: left;
+    line-height: 1.5;
+    padding: 0 0;
     box-sizing: border-box;
-    font-size: 30px;
+    font-size: 22px;
     font-weight: 900;
-    font-style: italic;
+    /* text-transform: uppercase; */
     color: white;
-    margin: 125px 0;
+    margin: 125px auto;
   }
 
   .container .slogan span {
     display: block;
-    margin: auto;
+    margin: 12px 0;
     width: 80%;
     color: rgba(255, 255, 255, 0.7);
     font-size: 16px;
@@ -514,7 +517,8 @@
   .about .aboutItem span {
     font-size: 20px;
     font-weight: 500;
-    font-style: italic;
+    /* font-style: italic; */
+    text-transform: uppercase;
     line-height: 1.5;
     display: block;
     color: rgba(255, 255, 255, 0.699);
