--- a/css/common.css
+++ b/css/common.css
@@ -3,29 +3,211 @@
   display: block;
   clear: both;
 }
+a {
+  background-image: linear-gradient(0.25turn, #ff449e, #ffa930);
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  background-size: 0 2px;
+  transition: 0.25s cubic-bezier(0.24, 0.26, 0.2, 1);
+}
+
+a:hover {
+  cursor: pointer;
+  background-size: 100% 2px;
+  transition: 0.25s cubic-bezier(0.24, 0.26, 0.2, 1);
+}
+
+a span,
+div span {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 18px;
+  color: #000000;
+}
+
+img {
+  max-width: 100%;
+}
+
+span::selection,
+a::selection,
+div::selection {
+  background: black;
+  color: #fff;
+}
 
 @media only screen and (min-width: 520px) {
   body {
-    background-color: #111;
-    padding: 30px 0;
+    background-color: #fff;
     /* min-width: 1400px; */
     font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
   }
 
-  .container {
-    margin-top: 20px;
-    width: 1152px;
+  .app_content {
+    padding-top: 104px;
+    display: block;
+    width: 80%;
+    height: 100%;
     margin: 0 auto;
+    left: 10%;
+    right: 10%;
+    z-index: 60;
     /* background-color: rgba(255, 255, 255, .3); */
     /* height: 750px; */
   }
 
-  .container .nav {
-    position: relative;
-    width: 100%;
-    height: 100px;
-    /* background-color:rgba(0, 0, 0, .7); */
-    /* border-bottom: 1px solid rgb(164, 164, 164); */
+  .large_title {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 56px;
+    letter-spacing: -0.02em;
+    color: #000000;
+  }
+
+  .medium_title {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 35px;
+    color: #000000;
+  }
+
+  .normal_title {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 26px;
+
+    color: #000000;
+  }
+
+  .overline {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 20px;
+    letter-spacing: 0.16em;
+    text-transform: uppercase;
+    color: rgba(0, 0, 0, 0.48);
+  }
+
+  .intro_content {
+    margin: 80px 0;
+  }
+
+  .intro .portfolio {
+    margin-top: 64px;
+  }
+
+  .works {
+    margin: 200px 0;
+  }
+
+  .intro_content .intro {
+    /* padding-top: 16%; */
+    grid-column: 1 / span 4;
+  }
+
+  .intro_content .photo {
+    grid-column: 5 / span 2;
+    overflow: hidden;
+    height: 400px;
+    object-fit: cover;
+  }
+
+  .button {
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 800;
+    letter-spacing: 0.12em;
+    line-height: 24px;
+    margin-top: 16px;
+  }
+
+  .works .work_content {
+    grid-column: 2 / span 4;
+  }
+
+  .works .work_content .work_title,
+  .blog_content .blog_title {
+    margin: 24px 0;
+  }
+
+  .works .cover,
+  .blogs .cover,
+  .home .cover {
+    height: 360px;
+    object-fit: cover;
+    overflow: hidden;
+    margin-bottom: 16px;
+  }
+
+  .food .cover {
+    height: 480px;
+    object-fit: cover;
+    overflow: hidden;
+    margin-bottom: 16px;
+  }
+
+  .project_name {
+    margin-top: 16px;
+  }
+
+  .blogs .blog_content {
+    grid-column: 3 / span 4;
+  }
+
+  .more {
+    margin-top: 200px;
+  }
+
+  .more_title {
+    grid-column: 2 / span 4;
+  }
+
+  .sports {
+    margin-top: 120px;
+    grid-column: 1 / span 3;
+  }
+
+  .foods {
+    margin-top: 400px;
+    grid-column: 5 / span 2;
+  }
+
+  .home {
+    margin-top: 60px;
+    grid-column: 2 / span 4;
+  }
+
+  .sports .medium_title,
+  .sports .cover,
+  .foods .medium_title,
+  .foods .cover,
+  .home .medium_title,
+  .home .cover {
+    margin-top: 8px;
+  }
+
+  .app_footer {
+    width: 80%;
+    left: 10%;
+    right: 10%;
+    margin: 160px auto;
+  }
+
+  .footer .contact {
+    grid-column: 1 / span 3;
+  }
+
+  .footer .portfolio {
+    margin: 64px 0;
+  }
+
+  .footer .portfolio,
+  .footer .resume {
+    grid-column: 3 / span 3;
+  }
+
+  .footer .freelance {
+    grid-column: 4 / span 3;
   }
 
   label,
@@ -33,75 +215,98 @@
     display: none;
   }
 
-  .container .nav .logo {
-    position: absolute;
-    left: -34px;
-    right: 0;
-    margin: 15px 35px;
-    width: 100px;
-    height: 100px;
-    opacity: 70%;
-    transition: ease-in-out 0.2s;
-  }
-
-  .container .nav .logo:hover {
-    opacity: 100%;
-    transition: ease-in-out 0.2s;
-  }
-
-  .container .nav .logo h1 {
-    display: none;
-  }
-
-  .container .nav .logo img {
-    height: 70px;
-    margin: 15px 25px;
-  }
-
-  .container .nav .navitem {
-    float: right;
-
-    /* transition: ease-in-out .2s; */
-  }
-
-  .container .nav .navitem a {
-    line-height: 100px;
-    margin: 0 12px;
-    padding: 12px 16px;
-    color: rgba(255, 255, 255, 0.746);
-    box-sizing: border-box;
-    font-size: 20px;
-    border: 1px solid rgba(255, 255, 255, 0);
-    font-weight: 500;
-    transition: ease-in-out 0.2s;
-  }
-
-  /* .container .nav .navitem :last-child {
-    padding-right: 0;
-  } */
-
-  .container .nav .navitem a:active {
-    transform: scale(0.9);
-    transition: ease-in-out 0.1s;
-    background-color: rgba(255, 255, 255, 0.24);
-  }
-
-  .container .nav .navitem a:hover {
-    color: white;
-    text-shadow: 2px 2px 0px #db296d;
-    transition: ease-in-out 0.2s;
-    border-radius: 40px;
-    border: 1px solid rgba(255, 255, 255, 0.24);
-    background-color: rgba(255, 255, 255, 0.12);
-  }
-
-  .contact {
-    margin: 50px auto;
-    width: 65%;
-    height: 200px;
+  .grid {
     display: grid;
-    grid-template-columns: 1fr 2.5fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    align-content: center;
+    left: 10%;
+    right: 10%;
+  }
+
+  .app_header {
+    display: block;
+    width: 80%;
+    position: fixed;
+    z-index: 70;
+    margin: 0 auto;
+    left: 10%;
+    right: 10%;
+    padding: 24px 0;
+    height: fit-content;
+  }
+
+  .app_header .grid_lines,
+  .app_content .grid_lines,
+  .app_footer .grid_lines {
+    z-index: -90;
+    overflow: hidden;
+    bottom: auto;
+  }
+
+  .app_header .grid_lines > div {
+    height: auto;
+  }
+
+  .grid_lines {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    margin: 0 auto;
+    position: fixed;
+    top: 0;
+    left: 10%;
+    right: 10%;
+    bottom: 0;
+    /* pointer-events: none; */
+  }
+
+  .grid_lines > div {
+    /* display: none; */
+    position: relative;
+    height: 100vh;
+    display: block;
+  }
+
+  .grid_lines > div:first-child,
+  .grid_lines > div:last-child {
+    display: block;
+  }
+
+  .grid_lines > div:first-child::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 1px;
+    height: 100%;
+    background-color: rgba(144, 144, 144, 0.12);
+  }
+
+  .grid_lines > div:after {
+    content: "";
+    position: absolute;
+    right: 0;
+    width: 1px;
+    height: 100%;
+    background-color: rgba(144, 144, 144, 0.12);
+  }
+
+  .header .nav-item {
+    height: 100%;
+  }
+
+  .header .nav-item a {
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+    text-transform: uppercase;
+
+    color: black;
+    box-sizing: border-box;
+    transition: 0.25s cubic-bezier(0.24, 0.26, 0.2, 1);
+  }
+
+  .header .nav-item a:hover {
+    color: black;
   }
 
   #logo {
