--- a/css/common.css
+++ b/css/common.css
@@ -38,7 +38,7 @@ div::selection {
 
 @media only screen and (min-width: 520px) {
   body {
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
     /* min-width: 1400px; */
     font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
   }
@@ -66,7 +66,7 @@ div::selection {
 
   .medium_title {
     font-weight: 600;
-    font-size: 32px;
+    font-size: 24px;
     line-height: 35px;
     color: #000000;
   }
@@ -89,7 +89,7 @@ div::selection {
   }
 
   .intro_content {
-    margin: 80px 0;
+    margin: 24px 0;
   }
 
   .intro .portfolio {
@@ -190,7 +190,7 @@ div::selection {
     width: 80%;
     left: 10%;
     right: 10%;
-    margin: 160px auto;
+    margin: 0 auto;
   }
 
   .footer .contact {
@@ -348,7 +348,8 @@ div::selection {
     color: white;
   }
 
-  .contact div span {
+  .contact span {
+    line-height: 1.5em;
     display: block;
     font-size: 20px;
     font-weight: 300;
