--- a/css/common.css
+++ b/css/common.css
@@ -36,6 +36,14 @@ div::selection {
   color: #fff;
 }
 
+.large_title {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  letter-spacing: -0.02em;
+  color: #000000;
+}
+
 @media only screen and (min-width: 520px) {
   body {
     background-color: rgb(255, 255, 255);
@@ -358,10 +366,16 @@ div::selection {
 
 @media only screen and (max-width: 520px) {
   body {
-    background-color: #111;
+    background-color: #fff;
     padding: 30px 0;
     width: 100vw;
     font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
+  }
+
+  .app_content {
+    width: 80%;
+    left: 50%;
+    right: 50%;
   }
 
   .container {
